--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -12,11 +12,12 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 
-    <meta property="og:title" content="Ваш выход">
-    <meta property="og:description" content="Узнайте, как добраться до своего пункта назначения от ближайших станций метро, включая маршрут под землей.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.jpg" url="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.jpg">
-    <meta name="twitter:image:src" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.jpg">
+    <meta property="og:url" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/" />
+    <meta property="og:title" content="Ваш выход" />
+    <meta property="og:description" content="Узнайте, как добраться до своего пункта назначения от ближайших станций метро, включая маршрут под землей." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.jpg" />
+    <meta name="twitter:image:src" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.jpg" />
 
 
 </head>
