--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="app/filters.js"></script>
     <script type="text/javascript" src="app/directives.js"></script>
 
-
+    <img src="fbimg.jpg" style="display: none;">
     <div class="mapScreen">
         <div ng-click="show_sharing=false; code_show=false;">
             <leaflet events-broadcast="events" bounds="bounds" center="center" paths="paths" markers="markers" controls="controls" defaults="defaults"></leaflet>
