--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -20,6 +20,11 @@
     <link href='http://fonts.googleapis.com/css?family=Ubuntu&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 
 
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
+
+    <script type="text/javascript">
+        VK.init({apiId: 4699434, onlyWidgets: true});
+    </script>
 
 </head>
 <body>
@@ -88,6 +93,7 @@
                                    right:instruction.toLowerCase().search('право')!=-1,
                                    turnik:instruction.toLowerCase().search('турнике')!=-1,
                                     escalat:instruction.toLowerCase().search('эскалат')!=-1,
+                                    exit:instruction.toLowerCase().search('выход в город')!=-1,
                                     lest:instruction.toLowerCase().search('лест')!=-1
                                    }" ng-repeat="instruction in station.indoor.instructions track by $index">{{instruction}}</li>
                                </ul>
@@ -121,6 +127,7 @@
             <div ng-show="show_sharing" class="share-buttons shadow">
                 <img ng-click="fbshare()" src="images/facebook-icon.png">
                 <img ng-click="vkshare()" src="images/vk-icon.png">
+                <img ng-click="twitter_share()" src="images/twitter-icon.png">
                 <img ng-click="send_mail()" src="images/email-icon.png">
                 <img ng-click="code_show = !code_show" src="images/html-icon.png">
                 <img ng-click="print()" src="images/print.png">
@@ -155,6 +162,15 @@
         </a>
         <div class="subheader">Поиск удобного выхода из метро Москвы</div>
         <img src="images/nextgis.png">
+        <div class="likes">
+            <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmyway.io&amp;width&amp;layout=button&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=80&amp;appId=123243167734681" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
+
+            <!--<div id="vk_like"></div>-->
+            <!--<script type="text/javascript">-->
+                <!--VK.Widgets.Like("vk_like", {type: "mini"});-->
+            <!--</script>-->
+        </div>
+
     </div>
     <!--
     <div class="container">
@@ -229,6 +245,52 @@
         ga('create', 'UA-58003132-1', 'auto');
         ga('send', 'pageview');
 
+    </script>
+
+
+
+    <script>
+        // Include the UserVoice JavaScript SDK (only needed once on a page)
+        UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/wLh8nrMVqetAMsVsRPPIrQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
+
+        //
+        // UserVoice Javascript SDK developer documentation:
+        // https://www.uservoice.com/o/javascript-sdk
+        //
+
+        // Set colors
+        UserVoice.push(['set', {
+            accent_color: '#448dd6',
+            trigger_color: 'white',
+            trigger_background_color: '#448dd6'
+        }]);
+
+        // Identify the user and pass traits
+        // To enable, replace sample data with actual user traits and uncomment the line
+        UserVoice.push(['identify', {
+            //email:      'john.doe@example.com', // User’s email address
+            //name:       'John Doe', // User’s real name
+            //created_at: 1364406966, // Unix timestamp for the date the user signed up
+            //id:         123, // Optional: Unique id of the user (if set, this should not change)
+            //type:       'Owner', // Optional: segment your users by type
+            //account: {
+            //  id:           123, // Optional: associate multiple users with a single account
+            //  name:         'Acme, Co.', // Account name
+            //  created_at:   1364406966, // Unix timestamp for the date the account was created
+            //  monthly_rate: 9.99, // Decimal; monthly rate of the account
+            //  ltv:          1495.00, // Decimal; lifetime value of the account
+            //  plan:         'Enhanced' // Plan name for the account
+            //}
+        }]);
+
+        // Add default trigger to the bottom-right corner of the window:
+        UserVoice.push(['addTrigger', { mode: 'contact', trigger_position: 'bottom-right' }]);
+
+        // Or, use your own custom trigger:
+        //UserVoice.push(['addTrigger', '#id', { mode: 'contact' }]);
+
+        // Autoprompt for Satisfaction and SmartVote (only displayed under certain conditions)
+        UserVoice.push(['autoprompt', {}]);
     </script>
 
 </body>
