--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -151,13 +151,8 @@
         </a>
         <div class="subheader">Поиск удобного выхода из метро Москвы</div>
         <img src="images/nextgis.png">
-        <div class="likes noprint">
-            <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmyway.io&amp;width&amp;layout=button&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=80&amp;appId=123243167734681" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
-
-            <!--<div id="vk_like"></div>-->
-            <!--<script type="text/javascript">-->
-                <!--VK.Widgets.Like("vk_like", {type: "mini"});-->
-            <!--</script>-->
+        <div class="likes">
+            <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script><div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki" data-yashareTheme="counter"></div>
         </div>
 
     </div>
@@ -242,10 +237,9 @@
     </script>
 
 
-
     <script>
         // Include the UserVoice JavaScript SDK (only needed once on a page)
-        UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/wLh8nrMVqetAMsVsRPPIrQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
+        UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/t7oCr7fqY9VT3u0bQynpRg.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
 
         //
         // UserVoice Javascript SDK developer documentation:
@@ -254,9 +248,9 @@
 
         // Set colors
         UserVoice.push(['set', {
-            accent_color: '#44add8',
+            accent_color: '#448dd6',
             trigger_color: 'white',
-            trigger_background_color: '#44add8'
+            trigger_background_color: '#448dd6'
         }]);
 
         // Identify the user and pass traits
@@ -286,6 +280,7 @@
         // Autoprompt for Satisfaction and SmartVote (only displayed under certain conditions)
         UserVoice.push(['autoprompt', {}]);
     </script>
+
 </div>
 
 </body>
