--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -2,7 +2,7 @@
 <head lang="en">
 
     <meta property="og:url" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/" />
-    <meta property="og:title" content="Ваш выход" />
+    <meta property="og:title" content="MyWay" />
     <meta property="og:description" content="Узнайте, как добраться до своего пункта назначения от ближайших станций метро, включая маршрут под землей." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.jpg" />
@@ -10,7 +10,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" />
-    <title>Метро для всех</title>
+    <title>MyWay</title>
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
@@ -250,7 +250,9 @@
         UserVoice.push(['set', {
             accent_color: '#448dd6',
             trigger_color: 'white',
-            trigger_background_color: '#448dd6'
+            trigger_background_color: '#448dd6',
+            contact_message_placeholder: 'Оставить отзыв или сообщить об ошибке',
+            screenshot_enabled: false
         }]);
 
         // Identify the user and pass traits
