--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -252,7 +252,10 @@
             trigger_color: 'white',
             trigger_background_color: '#448dd6',
             contact_message_placeholder: 'Оставить отзыв или сообщить об ошибке',
-            screenshot_enabled: false
+            screenshot_enabled: false,
+            strings:{
+                contact_message_placeholder: 'Оставить отзыв или сообщить об ошибке'
+            }
         }]);
 
         // Identify the user and pass traits
