--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                 перешла работать в холдинг Rambler&Co.
             </p>
             <p>
-                В октябре 2014 оставил работу в Студии.<br>
-                На данный момент занимаюсь личными проектами и фрилансом.
+                С января 2015 года - программист спецпроектов в lenta.ru
             </p>
             <p>
                 Переодически преподаю в Британской Высшей Школе Дизайна программирование на Processing на курсе "Дизайн
