--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <div class="header">
         <div class="white">
-            Привет! Меня зовут Михаил Дунаев, я программист-фрилансер.<br>
-            Моя основная специализация - это <span class="popup" title="Разработка интерфейса, html/css верстка">front-end</span>,
+            Привет! Меня зовут Михаил Дунаев, я web-программист.<br>
+            Моя основная специализация - это <span class="popup" title="Разработка интерфейса, html/css верстка">frontend</span>,
             <span class="popup" title="Web-приложения со сложной логикой">rich internet application</span>,
             <span class="popup" title="Визуализация данных, инфографика">data visualization</span>.
         </div>
