--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
         <div class="short">
             Родился в 1983 году. Опыт работы: дизайнер - 4 года, веб-программист - 5 лет.<br>
             Используемые технологии:<br>
-            CoffeeScript/JavaScript, Stylus/CSS, JQuery, Angular, d3js, Adobe CC.<br>
-            В меньшей степени:<br>
-            Python, GoogleAppEngine, Swift.<br>
+            CoffeeScript/ES6, Stylus, React, d3js, node.js<br>
         </div>
         <div class="long hidden">
             Родился в 1983 году в небольшом <span class="popup" title="г.Балаково, Саратовской обл.">городе</span> на
@@ -86,16 +84,16 @@
 
             Основной используемый язык программирования -
             <span class="popup" title="Язык программирования, транслируемый в JavaScript. CoffeeScript добавляет синтаксический сахар в духе Ruby, Python, Haskell и Erlang для того, чтобы улучшить читаемость кода и уменьшить его размер.">
-                CoffeeScript</span>, либо чистый JavaScript при необходимости.<br>
-            Из css-препроцессоров предпочитаю Stylus. Пакетный менеджер - Bower и Grunt в качестве инструмента для
-            сборки. IDE - Intellij IDEA.
+                CoffeeScript</span>, либо простой JavaScript при необходимости.<br>
+            Из css-препроцессоров предпочитаю Stylus. Пакетный менеджер - npm и gulp в качестве инструмента для
+            сборки. IDE - Atom.
             <p>
-                В качестве основы для веб-проектов чаще всего использую фреймворки Angular, JQuery, либо d3.js для
+                В качестве основы для веб-проектов использую React и d3.js для
                 визуализации данных.
             </p>
 
             <p>
-                Есть опыт в написании back-end на Python+GoogleAppEngine.
+                Есть опыт в написании backend на Python+GoogleAppEngine и node.js.
             </p>
 
             <p>
