--- a/lab/echo/index.html
+++ b/lab/echo/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
 
-    <div class="content">
-
+    <div id="content">
       <audio controls src="RadioJS.mp3" id='a0'></audio>
       <audio controls src="RadioJS.mp3" id='a1'></audio>
       <audio controls src="RadioJS.mp3" id='a2'></audio>
@@ -17,18 +16,28 @@
     </div>
 
   <script type="text/javascript">
-    var audioElm = document.getElementById("a1");
-    audioElm.play();
 
-    for (var i = 0; i < 6; i++) {
-      setTimeout(function(i){
-        var audioElm = document.getElementById("a"+i);
-        audioElm.play();
-        audioElm.volume = i/6;
-        if(i==0) audioElm.volume = 0.05;
-        if(i==5) audioElm.volume = 1;
-      }.bind(this, i), i*250);
+    var numCanPlay = 0;
+
+    for (var a = 0; a < 6; a++) {
+      var player = document.getElementById("a"+a);
+      player.oncanplay = function(){
+        numCanPlay++;
+        if(numCanPlay==6){
+          for (var i = 0; i < 6; i++) {
+            setTimeout(function(i){
+              var audioElm = document.getElementById("a"+i);
+              audioElm.play();
+              audioElm.volume = i/10;
+              if(i==0) audioElm.volume = 0.03;
+              if(i==5) audioElm.volume = 1;
+            }.bind(this, i), i*250);
+          }
+        }
+      };
     }
+
+
 
 
   </script>
