--- a/lab/echo/index.html
+++ b/lab/echo/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body style='background-color:#FF0055; color: #eee'>
 
     <div id="content">
-      <audio controls src="RadioJS.mp3" id='a0'></audio>
-      <audio controls src="RadioJS.mp3" id='a1'></audio>
-      <audio controls src="RadioJS.mp3" id='a2'></audio>
-      <audio controls src="RadioJS.mp3" id='a3'></audio>
-      <audio controls src="RadioJS.mp3" id='a4'></audio>
-      <audio controls src="RadioJS.mp3" id='a5'></audio>
+      please wait
+      <audio  src="RadioJS.mp3" id='a0'></audio>
+      <audio  src="RadioJS.mp3" id='a1'></audio>
+      <audio  src="RadioJS.mp3" id='a2'></audio>
+      <audio  src="RadioJS.mp3" id='a3'></audio>
+      <audio  src="RadioJS.mp3" id='a4'></audio>
+      <audio  src="RadioJS.mp3" id='a5'></audio>
     </div>
 
   <script type="text/javascript">
