--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="short">
             Родился в 1983 году. Опыт работы: дизайнер - 4 года, веб-программист - 5 лет.<br>
             Используемые технологии:<br>
-            CoffeeScript/ES6, Stylus, React, d3js, node.js<br>
+            ES2015, Stylus, React, d3js, node.js<br>
         </div>
         <div class="long hidden">
             Родился в 1983 году в небольшом <span class="popup" title="г.Балаково, Саратовской обл.">городе</span> на
@@ -83,10 +83,8 @@
             <h2>Используемые технологии:</h2>
 
             Основной используемый язык программирования -
-            <span class="popup" title="Язык программирования, транслируемый в JavaScript. CoffeeScript добавляет синтаксический сахар в духе Ruby, Python, Haskell и Erlang для того, чтобы улучшить читаемость кода и уменьшить его размер.">
-                CoffeeScript</span>, либо простой JavaScript при необходимости.<br>
-            Из css-препроцессоров предпочитаю Stylus. Пакетный менеджер - npm и gulp в качестве инструмента для
-            сборки. IDE - Atom.
+            JavaScript/ES2015.<br>
+            Из css-препроцессоров предпочитаю Stylus+PostCSS. Пакетный менеджер - npm и gulp+webpack в качестве инструмента для сборки. IDE - Atom.
             <p>
                 В качестве основы для веб-проектов использую React и d3.js для
                 визуализации данных.
@@ -94,10 +92,6 @@
 
             <p>
                 Есть опыт в написании backend на Python+GoogleAppEngine и node.js.
-            </p>
-
-            <p>
-                Также много интересуюсь разработкой под iOS с использованием Swift.
             </p>
 
             <p>
@@ -113,8 +107,7 @@
                 2008-2010гг. Компания "Крафт". Графический/веб-дизайнер.
             </p>
             <p>
-                После этого, увлекшись программированием на платформе Adobe Flash, оставил работу дизайнером и около
-                года
+                После этого, увлекшись программированием на платформе Adobe Flash, оставил работу дизайнером и около года
                 занимался созданием интерактивных презентаций как программист/дизайнер фрилансер.<br>
                 Паралельно с этим вел курсы по базовому и углубленному программированию на ActionScript3/Flex в школе
                 компьютерной графики Realtime.
