update css path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:title" content="Mikhail Dunaev" />
 	<meta property="og:description" content="Frontend Developer" />
 	<meta property="og:image" content="http://mdunaev.github.io/og.png" />
-	<link href="./style.css" rel="stylesheet" type="text/css">
+	<link href="./bundle/style.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="/bundle/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&amp;subset=latin,cyrillic,latin-ext" rel="stylesheet" type="text/css">
 </head>
