--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<br>
 					The app has two parts. 
 					<br>
-					<video autoplay loop>
+					<video autoplay loop controls>
 						<source src="/video/1.mp4">
 					</video>
 					<br>
@@ -83,7 +83,7 @@
 					The second one is wysiwyg component editor. Designer can create article from components and download it as static files.
 					<br>
 					<div class="videofix">
-						<video autoplay loop>
+						<video autoplay loop controls>
 							<source src="/video/2.mp4">
 						</video>
 					</div>
@@ -512,7 +512,7 @@
 			<div class="middle--header">
 				<b>Contacts</b>
 				<p>
-					<a href="www.linkedin.com/in/mikhail-dunaev" target="_blank">
+					<a href="http://www.linkedin.com/in/mikhail-dunaev" target="_blank">
 						<i class="fa fa-linkedin"></i></a>	
 					
 					<a href="https://www.facebook.com/mdunaev" target="_blank">
