--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="intro">
 			<p>Hello World!</p> 
 			<p>My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i></p> 
-			<p>I'm a 33 years frontend developer based in Moscow, Russia.</p> 
+			<p>I'm a 33 years old frontend developer based in Moscow, Russia.</p> 
 			<p>I have over six years experience as a developer. Before that I had a good experience as a designer.</p> 
 			<p>Currently looking for a job in Europe.</p> 
 			<br>
@@ -29,8 +29,8 @@
 			<br>
 			<p>Some other keywords about my skills: HTML5, Stylus, Slim, d3.js, React, Redux, Node.JS, Webpack, Gulp, Python, Ruby, MongoDB, ActionScript, Git, Jira, Agile, Adobe CC, Sketch. </p> 
 			<br>
-			<p>I have a <a target="_blank" href="https://icagile.com/public-transcript.aspx?u=dunaev-mikhail">Agile Professional Certificate</a>. </p> 
-			<p>Some my speak at various conferences:</p> 
+			<p>I'm <a target="_blank" href="https://icagile.com/public-transcript.aspx?u=dunaev-mikhail">certified</a> Agile professional. </p> 
+			<p>Some of my talks at various conferences:</p> 
 			<a class="talk-video" href="https://www.youtube.com/watch?v=NdxRTiM6pPo" target="_blank">
 				<img src="/images/mjs1.png" alt=""><span class="talk-video--text">MoscowJS 19 2015 (rus)</span>
 			</a>
