--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 			<br>
 			<p>I'm <a target="_blank" href="https://icagile.com/public-transcript.aspx?u=dunaev-mikhail">certified</a> Agile professional. </p> 
 			<p>Some of my talks at various conferences:</p> 
+			<a class="talk-video" href="https://www.youtube.com/watch?v=QAVNsSAI6nk" target="_blank">
+				<img src="/images/mjs2.png" alt=""><span class="talk-video--text">MoscowJS 31 2016 (rus)</span>
+			</a>
+			<br>
 			<a class="talk-video" href="https://www.youtube.com/watch?v=NdxRTiM6pPo" target="_blank">
 				<img src="/images/mjs1.png" alt=""><span class="talk-video--text">MoscowJS 19 2015 (rus)</span>
 			</a>
