--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 		<div class="intro">
 			<p>Hello World!</p> 
 			<p>My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i></p> 
-			<p>I'm a 33 years old frontend developer based in Moscow, Russia.</p> 
+			<p>I'm a 33 years old frontend developer based in Tallinn, Estonia.</p> 
 			<p>I have over six years experience as a developer. Before that I had a good experience as a designer.</p> 
-			<p>Currently looking for a job in Europe.</p> 
+			<p>Currently not looking for a job.</p> 
 			<br>
-			<p>My main specialty is infographics, web interfaces and interactive storytelling.</p> 
+			<p>My main specialty is game development, infographics, and interactive storytelling.</p> 
 			<br>
-			<p>The preferred language is JavaScript(ES2016) with library React and precompiler Stylus.</p> 
+			<p>The preferred language is TypeScript with React/Redux and Stylus.</p> 
 			<p>I also experienced in developing full stack application with Node.js (Express.js) and MongoDB.</p> 
 			<br>
 			<p>Some other keywords about my skills: HTML5, Stylus, Slim, d3.js, React, Redux, Node.JS, Webpack, Gulp, Python, Ruby, MongoDB, ActionScript, Git, Jira, Agile, Adobe CC, Sketch. </p> 
 			<br>
-			<p>I'm <a target="_blank" href="https://icagile.com/public-transcript.aspx?u=dunaev-mikhail">certified</a> Agile professional. </p> 
+			<p>I'm <a target="_blank" href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">certified</a> Agile professional. </p> 
 			<p>Some of my talks at various conferences:</p> 
 			<a class="talk-video" href="https://www.youtube.com/watch?v=QAVNsSAI6nk" target="_blank">
 				<img src="/images/mjs2.png" alt=""><span class="talk-video--text">MoscowJS 31 2016 (rus)</span>
@@ -318,36 +318,6 @@
 			</div>
 			<!-- to here -->
 
-
-			<!-- form here -->
-			<div class="works--item">
-				<div class="works--item--cover">
-					<img src="/images/work/mosmetro.png" alt="">
-				</div>
-				<div class="works--item--name">
-					100 years of the Moscow Metro
-				</div>
-				<div class="works--item--content">
-					<div class="works--item--content--name">
-						100 years of the Moscow Metro
-					</div>
-
-					<div class="works--item--content--close"><i class="fa fa-times" aria-hidden="true"></i></div>
-					
-					<span class="works--item--content__blue">
-						Longread about story of the Moscow Metro.
-					</span>
-					The longread shows the Moscow Metro progress by decades.
-					<br>
-					It has an adaptive layout.
-					<br>
-					<br>
-					<a href="http://metro.lenta.ru/eng/" target="_blank">
-						<img src="/images/work/mosmetro-full.png" alt=""><br><i class="fa fa-link big-link" aria-hidden="true"></i>
-					</a>
-				</div>
-			</div>
-			<!-- to here -->
 
 			<!-- form here -->
 			<div class="works--item">
