Update current job

--- a/index.html
+++ b/index.html
@@ -451,11 +451,18 @@
 			</div>
 			<br>
 			<p>
+				<b>JavaScript Developer</b>
+				<br>
+				Evolution Gaming Estonia
+				<br>
+				January 2017 – Present
+			</p>
+			<p>
 				<b>Senior Frontend Developer</b>
 				<br>
 				Rambler&Co
 				<br>
-				April 2016 – Present
+				April 2016 – December 2016
 			</p>
 			<p>
 				<b>Frontend Developer</b>
