--- a/index.html
+++ b/index.html
@@ -18,35 +18,37 @@
 		<div class="intro">
 			<p>Hello World!</p> 
 			<p>My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i></p> 
-			<p>I'm a 33 years old frontend developer based in Tallinn, Estonia.</p> 
-			<p>I have over six years experience as a developer. Before that I had a good experience as a designer.</p> 
-			<p>Currently not looking for a job.</p> 
-			<br>
-			<p>My main specialty is game development, infographics, and interactive storytelling.</p> 
-			<br>
-			<p>The preferred language is TypeScript with React/Redux and Stylus.</p> 
-			<p>I also experienced in developing full stack application with Node.js (Express.js) and MongoDB.</p> 
-			<br>
-			<p>Some other keywords about my skills: HTML5, Stylus, Slim, d3.js, React, Redux, Node.JS, Webpack, Gulp, Python, Ruby, MongoDB, ActionScript, Git, Jira, Agile, Adobe CC, Sketch. </p> 
-			<br>
-			<p>I'm <a target="_blank" href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">certified</a> Agile professional. </p> 
+      <p>I'm 34 years old frontend developer from Moscow, Russia, based in Tallinn, Estonia during the past 1.5 years.</p>
+      <p>I have over seven years work experience as a developer and earlier 
+        I had extensive backgrounds in graphic design.</p>
+      <p>In addition to work, I taught creative coding at 
+        British Higher School of Art and Design and programming at Realtime School.
+      </p>
+
+      <p>My main specialty is game development, infographics, and interactive storytelling.</p>
+
+      <p>The preferred technologies is JavaScript (Babel, Webpack, NPM etc.), 
+        React/Redux, d3.js, Node.js (Express.js), MongoDB and PostCSS.</p>
+
+      <p>I'm <a target="_blank" href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">certified</a> Agile professional
+        and organiser <a target="_blank" href="https://tallinnjs.github.io/tjs1/">TallinnJS</a> meetup. 
+        Also I have blockchain-based <a href="https://ethplace.io/" target="_blank">pet-project</a>.</p> 
 			<p>Some of my talks at various conferences:</p> 
+			<a class="talk-video" href="https://www.youtube.com/watch?v=lkTH4-jsioA" target="_blank">
+				<img src="/images/devclub.png" alt=""><span class="talk-video--text">DevClub 2017 / Tallinn</span>
+      </a>
+      <br>
 			<a class="talk-video" href="https://www.youtube.com/watch?v=QAVNsSAI6nk" target="_blank">
-				<img src="/images/mjs2.png" alt=""><span class="talk-video--text">MoscowJS 31 2016 (rus)</span>
+				<img src="/images/mjs2.png" alt=""><span class="talk-video--text">MoscowJS 2016 / Moscow</span>
 			</a>
 			<br>
 			<a class="talk-video" href="https://www.youtube.com/watch?v=NdxRTiM6pPo" target="_blank">
-				<img src="/images/mjs1.png" alt=""><span class="talk-video--text">MoscowJS 19 2015 (rus)</span>
+				<img src="/images/mjs1.png" alt=""><span class="talk-video--text">MoscowJS 2015 / Moscow</span>
 			</a>
 			<br>
-			<a class="talk-video" href="http://frontendconf.ru/2015/abstracts/1789" target="_blank">
-				<img src="/images/rit.png" alt=""><span class="talk-video--text">FrontendConf 2015 (rus)</span>
+			<a class="talk-video" href="https://www.youtube.com/watch?v=F8Q3brDDZ3A" target="_blank">
+				<img src="/images/rit.png" alt=""><span class="talk-video--text">FrontendConf 2015 / Moscow</span>
 			</a>
-			<br>
-			<a class="talk-video" href="https://www.youtube.com/watch?v=mpCvE8lhFnw" target="_blank">
-				<img src="/images/stachka.png" alt=""><span class="talk-video--text">Stachka 2016 (rus)</span>
-			</a>
-			<br>
 		</div>
 		<div class="works">
 
