--- a/index.html
+++ b/index.html
@@ -454,7 +454,9 @@
 			<br>
 			<p>
 				<b>JavaScript Developer</b>
-				<br>
+        <br>
+        <i>Development of various types of online casino games</i>
+        <br>
 				Evolution Gaming Estonia
 				<br>
 				January 2017 – Present
@@ -462,6 +464,9 @@
 			<p>
 				<b>Senior Frontend Developer</b>
 				<br>
+        <i>Development from scratch and organising workflow process of a website with news of science - 
+            <a href="https://indicator.ru/" target="_blank">https://indicator.ru/</a></i>
+        <br>
 				Rambler&Co
 				<br>
 				April 2016 – December 2016
@@ -469,6 +474,9 @@
 			<p>
 				<b>Frontend Developer</b>
 				<br>
+        <i>Development and support biggest news website in Russia - 
+            <a href="http://lenta.ru" target="_blank">http://lenta.ru</a></i>
+        <br>
 				Rambler&Co
 				<br>
 				April 2014 – April 2016
@@ -476,6 +484,8 @@
 			<p>
 				<b>Lead Flash Developer</b>
 				<br>
+        <i>Development and management small group of developers (6 person)</i>
+        <br>
 				RIA Novosti
 				<br>
 				December 2011 – April 2014 
@@ -483,12 +493,13 @@
 			<p>
 				<b>Flash Developer</b>
 				<br>
+        <i>Data visualisation and interactive infographics development</i>
+        <br>
 				RIA Novosti
 				<br>
 				January 2011 – December 2011 
 			</p>
 			<br>
-			In addition to work, I taught creative coding at British Higher School of Art and Design and programming at Realtime School
 		</div>
 
 		<div class="contacts">
