--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p>My main specialty is game development, infographics, and interactive storytelling.</p>
 
 			<p>The preferred technologies is TypeScript,
-				React, Redux, d3.js, pixi.js, Node.js.</p>
+				React, Redux, D3.js, Pixi.js, Node.js.</p>
 
 			<p>Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
 				   href="https://ethplace.io/">eth/place</a>.
