--- a/index.html
+++ b/index.html
@@ -583,13 +583,13 @@
 			</div>
 			<br>
 			<p>
-				<b>Frontend Technical Lead</b>
+				<b>Head of Frontend Department</b>
 				<br>
-				<i>Online Casino development</i>
+				<i>Team management. More than 10 developers</i>
 				<br>
-				Throne Gaming OÜ
+				Paxful OÜ
 				<br>
-				April 2018 – October 2018
+				November 2018 - current
 			</p>
 
 			<p>
