--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
 		<div class="intro">
 			<p>Hello World!</p>
 			<p>My name is Mikhail Dunaev.<i class="fa fa-camera-retro cv-photo"></i></p>
-			<p>I'm 35 years old frontend developer from Moscow, Russia, based in Tallinn, Estonia during the last 1.5 years.</p>
-			<p>I have over nine years work experience as a developer and earlier
+			<p>I'm 35 years old UI/UX developer from Moscow, Russia, based in Tallinn, Estonia during the last 3 years.</p>
+			<p>I have over ten years work experience as a lead frontend developer and earlier
 				I had extensive backgrounds in graphic design.</p>
 
-			<p>My main specialty is game development, infographics, and interactive storytelling.</p>
+			<p>My main specialty is rich interfaces, game development, infographics, and interactive storytelling.</p>
 
 			<p>The preferred technologies is TypeScript,
-				React, Redux, D3.js, Pixi.js, Node.js.</p>
+				React, Redux, D3.js, WebGL, Node.js.</p>
 
 			<p>Also I'm interested in blockchain. <br> My hobby project for Ethereum blockchain - <a target="_blank"
-				   href="https://ethplace.io/">eth/place</a>.
+				   href="https://medium.com/ethplace/building-public-crypto-art-in-the-ethereum-network-fded5d8c3b8e">eth/place</a>.
 			</p>
 
 			<p>I'm <a target="_blank"
 				   href="https://icagile.com/Agile-Professionals/Find-Agile-Professionals/ctl/UserDetails/mid/938/uid/8c3eca4a-a3fb-4a87-9c6d-a8b4e6203449">certified</a>
 				Agile specialist and organiser <a target="_blank"
-				   href="https://tallinnjs.github.io/tjs1/">TallinnJS</a> meetup.
+				   href="https://tallinnjs.github.io/">TallinnJS</a> meetup.
 				<p>Some of my talks at various conferences:</p>
 				<a class="talk-video"
 				   href="https://www.youtube.com/watch?v=owhyY09iEk0"
@@ -630,16 +630,16 @@
 				<br>
 				RIA Novosti
 				<br>
-				December 2011 – April 2014
+				January 2011 – April 2014
 			</p>
 			<p>
-				<b>Flash Developer</b>
+				<b>Art Director</b>
 				<br>
-				<i>Data visualisation and interactive infographics development</i>
+				<i>Brand Identity Definition</i>
 				<br>
-				RIA Novosti
+				Kraft Group
 				<br>
-				January 2011 – December 2011
+				May 2008 – December 2010
 			</p>
 			<br>
 		</div>
