--- a/index.html
+++ b/index.html
@@ -583,9 +583,9 @@
 			</div>
 			<br>
 			<p>
-				<b>Head of Frontend Department</b>
+				<b>UX Engineering Director</b>
 				<br>
-				<i>Team management. More than 10 developers</i>
+				<i>Built a UX Department from scratch. More than 30 employees.</i>
 				<br>
 				Paxful OÜ
 				<br>
